# simulator

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  DEVELOPER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  repository.json  repository.yaml
.github/instructions/: *.instructions.md
.github/workflows/: build-addon.yaml  lint.yaml
configs/: MAIN_40.yaml  default_MAIN_16.yaml  default_MAIN_32.yaml  default_MAIN_40.yaml  default_config.yaml  presets.yaml  simple_test_config.yaml  simulation_config_32_circuit.yaml
docs/Dev/: cost-modeling.md  ha-addon-plan.md  homie_schema_2026-03-20.json  panel-cloning.md  schema-driven-architecture.md
ha-addon/: DOCS.md  Dockerfile  config.yaml  run.sh
mosquitto/: mosquitto.conf.template
scripts/: entrypoint.sh  fix-markdown.sh  run-local.sh  sync-version.sh
span_panel_simulator/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  run.sh
span_panel_simulator/docs/: 2026-03-18-modeling-view-design.md  cost-and-montecarlo-specs.md  platform-roadmap.md
span_panel_simulator/translations/: de.yaml  en.yaml  es.yaml  fr.yaml  nl.yaml  pt-BR.yaml
src/span_panel_simulator/: __init__.py  __main__.py  app.py  behavior_mutable_state.py  bootstrap.py  bsee.py  certs.py  circuit.py  clock.py  clone.py  clone_handler.py  config_types.py  const.py  discovery.py  engine.py  exceptions.py  history.py  history_generator.py  homie_const.py  hvac.py  models.py  panel.py  profile_applicator.py  publisher.py  recorder.py  schema.py  scraper.py  sio_handler.py  solar.py  sqlite_history.py  supervisor_discovery.py  validation.py  weather.py
tests/: conftest.py  test_app.py  test_bootstrap_single.py  test_certs.py  test_clone.py  test_clone_handler.py  test_config_store.py  test_history.py  test_history_generator.py  test_manifest.py  test_modeling.py  test_panel.py  test_port_allocation.py  test_profile_applicator.py  test_profile_builder.py  test_publisher.py  test_purge_recorder.py  test_schema.py  test_scraper.py  test_sio.py  test_sqlite_app_integration.py  test_sqlite_history.py  test_supervisor_discovery.py
tests/test_energy/: __init__.py  test_bus.py  test_components.py  test_scenarios.py  test_tou.py  test_tou_integration.py
tests/test_ha_api/: test_opower.py
(+74 files in other folders)
