[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "span-panel-simulator"
version = "0.1.0"
description = "Standalone eBus simulator for SPAN panels"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.0.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.15.0",
    "mypy>=1.10",
]

[project.scripts]
span-simulator = "span_panel_simulator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/span_panel_simulator"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
