[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "span-panel-simulator"
version = "1.0.5"
description = "Standalone eBus simulator for SPAN panels"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.0.0",
    "aiohttp>=3.9.0",
    "aiohttp-jinja2>=1.6",
    "jinja2>=3.1.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0",
    "zeroconf>=0.131.0",
    "timezonefinder>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.15.0",
    "mypy>=1.10",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
span-simulator = "span_panel_simulator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/span_panel_simulator"]

[tool.hatch.build.targets.wheel.force-include]
"src/span_panel_simulator/dashboard/templates" = "span_panel_simulator/dashboard/templates"
"src/span_panel_simulator/dashboard/static" = "span_panel_simulator/dashboard/static"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "timezonefinder"
ignore_missing_imports = true
